--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,18 @@
 body {
   margin: 0;
-  font-family: 'Meiryo', 'Hiragino Kaku Gothic Pro', Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+    "Hiragino Sans", "Hiragino Kaku Gothic Pro", "Meiryo", "Yu Gothic", Arial,
+    sans-serif;
   font-size: 0.73rem;
+}
+
+/* Styled-components inheritance */
+div,
+span,
+input,
+button {
+  font-family: inherit;
+  font-size: inherit;
 }
 
 input {
@@ -37,7 +48,7 @@ input {
 }
 
 .input-text__dummy::before {
-  content: '';
+  content: "";
 }
 
 .input-text__dummy:empty::before {
